--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,21 +4,7 @@ on:
   workflow_dispatch:
   release:
     types: [published]
-  push:
-    branches:
-      - master
-    paths:
-      - "**/*.go"
-      - "go.mod"
-      - "go.sum"
-      - ".github/workflows/*.yml"
-  pull_request:
-    types: [opened, synchronize, reopened]
-    paths:
-      - "**/*.go"
-      - "go.mod"
-      - "go.sum"
-      - ".github/workflows/*.yml"
+
 jobs:
   build:
     permissions:
@@ -89,17 +75,18 @@ jobs:
           echo "ASSET_NAME=$_NAME" >> $GITHUB_ENV
 
       - name: Set up Go
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v4
         with:
-          go-version: 1.19
           check-latest: true
 
       - name: Get project dependencies
         run: go mod download
+        working-directory: ./commands/encrypt
       
       - name: Build hugo encrypt
         run: |
           go build -v -o hugo-encrypt -trimpath -ldflags "-s -w -buildid=" .
+        working-directory: ./commands/encrypt
 
       - name: Rename Windows hugo encrypt
         if: matrix.goos == 'windows'
