Fix release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -90,15 +90,18 @@ jobs:
 
       - name: Rename Windows hugo encrypt
         if: matrix.goos == 'windows'
+        working-directory: ./commands/encrypt
         run: |
           mv hugo-encrypt hugo-encrypt.exe
 
       - name: Change the name
+        working-directory: ./commands/encrypt
         run: |
           mv hugo-encrypt hugo-encrypt-${{ env.ASSET_NAME }} || mv hugo-encrypt.exe hugo-encrypt-${{ env.ASSET_NAME }}.exe
 
       - name: Upload files to Artifacts
         uses: actions/upload-artifact@v3
+        working-directory: ./commands/encrypt
         with:
           name: hugo-encrypt-${{ env.ASSET_NAME }}
           path: |
@@ -106,9 +109,10 @@ jobs:
 
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v2
+        working-directory: ./commands/encrypt
         if: github.event_name == 'release'
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ./hugo-encrypt-${{ env.ASSET_NAME }}*
+          file: ./commands/encrypt/hugo-encrypt-${{ env.ASSET_NAME }}*
           tag: ${{ github.ref }}
           file_glob: true
