feat: integrate with HugoPress

--- a/hugo.toml
+++ b/hugo.toml
@@ -7,3 +7,7 @@ path = "github.com/hugomods/icons/vendors/bootstrap"
 [params.encrypt]
 password = ""
 storage = "session"
+
+[params.hugopress.modules.encrypt.hooks.head-end]
+
+[params.hugopress.modules.encrypt.hooks.body-end]
