--- a/hugo.toml
+++ b/hugo.toml
@@ -10,6 +10,7 @@ path = "github.com/hugomods/icons/vendors/bootstrap"
 [params.encrypt]
 password = ""
 storage = "session"
+sass_transpiler = "dartsass"
 
 [params.hugopress.modules.encrypt.hooks.head-end]
 
